--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/circuit-breaker/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Circuit Breaker - Neon Cyberpunk Arcade Game</title>
     <meta name="description" content="Navigate the digital frontier in Circuit Breaker - where every pixel pulses with neon energy and every move could fry your data packet." />
