Fix TypeScript compilation errors and build issues
- Fix PowerUpManager import issues by defining PowerUpType locally in Level.ts
- Fix PowerUpType compatibility issues in renderer with proper type assertions
- Add 'powerup_collected' event type to StatsManager
- Remove unused variables and parameters to eliminate warnings
- Fix all TypeScript compilation errors for successful build
- Update version to 0.7.0 with working power-up saucer system

Build now completes successfully with no errors.

--- a/audio_test_page.html
+++ b/audio_test_page.html
@@ -266,7 +266,7 @@
 
         function playMenuMusic() {
             if (window.game?.audioManager) {
-                window.game.audioManager.playMusic('Engage_II.mp3', true, 0.6);
+                window.game.audioManager.playMusic('02-Delorean_Time.mp3', true, 0.6);
                 log('🎵 Playing menu music');
             }
         }
